--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alana</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CelebraCampo - Reserva PR</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <img src="img/Marcelo.png" alt=">
+  <header>
+    <div class="logo">
+      <h1>CelebraCampo</h1>
+      <img src="img/bandeira.png" alt="Bandeira de Reserva PR">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#feira">Feira da Lua</a></li>
+        <li><a href="#oficinas">Oficinas Mistas</a></li>
+        <li><a href="#culinaria">Culinária Integrativa</a></li>
+        <li><a href="#mostra">Mostra Cultural</a></li>
+        <li><a href="#espaco">Espaço Interativo</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <!-- FEIRA DA LUA -->
+    <section id="feira" class="azul">
+      <h2>Feira da Lua</h2>
+      <div class="content">
+        <img src="img/feira1.jpg" alt="Feira da Lua 1">
+        <img src="img/feira2.jpg" alt="Feira da Lua 2">
+        <p>O "Luau em Reserva", no Paraná, é um evento que mistura cultura, natureza e diversão, em ambientes ao ar livre. Com música ao vivo, gastronomia local e clima relaxante, atrai cada vez mais visitantes, sendo uma celebração adaptada às tradições paranaenses.</p>
+      </div>
+    </section>
+
+    <!-- OFICINAS MISTAS -->
+    <section id="oficinas" class="laranja">
+      <h2>Oficinas Mistas</h2>
+      <div class="content">
+        <img src="img/oficinas1.jpg" alt="Oficina Cultural">
+        <p>A Secretaria de Educação, Cultura, Esporte e Lazer de Reserva promove oficinas gratuitas para todas as idades. São atividades que envolvem arte, esporte e cultura — fortalecendo a integração da comunidade.</p>
+        <img src="img/oficinas2.jpg" alt="Costurando Sonhos">
+      </div>
+    </section>
+
+    <!-- CULINÁRIA INTEGRATIVA -->
+    <section id="culinaria" class="laranja">
+      <h2>Culinária Integrativa</h2>
+      <div class="content">
+        <p>Sabores como barreado, pinhão e chimarrão ganham novas leituras com toques saudáveis. A proposta integrativa destaca vegetais, raízes nativas, preparo consciente e práticas funcionais em cafés, buffets e eventos de turismo rural.</p>
+        <img src="img/culinaria.jpg" alt="Culinária em ação">
+      </div>
+    </section>
+
+    <!-- MOSTRA CULTURAL -->
+    <section id="mostra" class="verde">
+      <h2>Mostra Cultural</h2>
+      <div class="content">
+        <img src="img/mostra.jpg" alt="Mostra Cultural">
+        <p>Espaço dedicado à expressão artística local com apresentações de dança, música, teatro e exposições de artesanato. Incentiva a valorização da identidade cultural de Reserva e o protagonismo de artistas da região.</p>
+      </div>
+    </section>
+
+    <!-- ESPAÇO INTERATIVO -->
+    <section id="espaco" class="verde">
+      <h2>Espaço Interativo e Educativo</h2>
+      <div class="content">
+        <p>Ambiente pensado para promover a educação ambiental, oficinas práticas, rodas de conversa e brincadeiras para crianças. Estimula o aprendizado coletivo e o contato direto com a natureza.</p>
+        <img src="img/espaco.jpg" alt="Espaço Educativo">
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 CelebraCampo - Reserva/PR</p>
+    <div class="redes">
+      <a href="#"><img src="img/x.png" alt="X"></a>
+      <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+    </div>
+  </footer>
 </body>
 </html>
