--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Feira da Lua</h2>
       <div class="content">
         <img src="img/WhatsApp Image 2025-06-12 at 09.18.26 (1).jpeg" alt="Feira da Lua 1">
-        <img src="img/WhatsApp Image 2025-06-12 at 09.13.36 (1).jpeg" alt="Feira da Lua 2">
+        <img src="img/WhatsApp Image 2025-06-12 at 09.13.36.jpeg" alt="Feira da Lua 2">
         <p>O "Luau em Reserva", no Paraná, é um evento que mistura cultura, natureza e diversão, em ambientes ao ar livre. Com música ao vivo, gastronomia local e clima relaxante, atrai cada vez mais visitantes, sendo uma celebração adaptada às tradições paranaenses.</p>
       </div>
     </section>
