--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="oficinas" class="laranja">
       <h2>Oficinas Mistas</h2>
       <div class="content">
-        <img src="img/oficinas1.jpg" alt="Oficina Cultural">
+        <img src="img/original-00a9f9337f4a2f69ea58e60c5d29c9e2.png" alt="Oficina Cultural">
         <p>A Secretaria de Educação, Cultura, Esporte e Lazer de Reserva promove oficinas gratuitas para todas as idades. São atividades que envolvem arte, esporte e cultura — fortalecendo a integração da comunidade.</p>
         <img src="img/oficinas2.jpg" alt="Costurando Sonhos">
       </div>
