--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="content">
         <img src="img/WhatsApp Image 2025-06-12 at 09.13.36 (1).jpeg" alt="Oficina Cultural">
         <p>A Secretaria de Educação, Cultura, Esporte e Lazer de Reserva promove oficinas gratuitas para todas as idades. São atividades que envolvem arte, esporte e cultura — fortalecendo a integração da comunidade.</p>
-        <img src="img/oficinas2.jpg" alt="Costurando Sonhos">
+        <img src="img/WhatsApp Image 2025-06-12 at 09.13.36.jpeg" alt="Costurando Sonhos">
       </div>
     </section>
 
