--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2>Culinária Integrativa</h2>
       <div class="content">
         <p>Sabores como barreado, pinhão e chimarrão ganham novas leituras com toques saudáveis. A proposta integrativa destaca vegetais, raízes nativas, preparo consciente e práticas funcionais em cafés, buffets e eventos de turismo rural.</p>
-        <img src="img/culinaria.jpg" alt="Culinária em ação">
+        <img src="img/WhatsApp Image 2025-06-12 at 09.18.26.jpeg" alt="Culinária em ação">
       </div>
     </section>
 
@@ -57,7 +57,7 @@
     <section id="mostra" class="verde">
       <h2>Mostra Cultural</h2>
       <div class="content">
-        <img src="img/WhatsApp Image 2025-06-12 at 09.18.26.jpeg." alt="Mostra Cultural">
+        <img src="img/" alt="Mostra Cultural">
         <p>Espaço dedicado à expressão artística local com apresentações de dança, música, teatro e exposições de artesanato. Incentiva a valorização da identidade cultural de Reserva e o protagonismo de artistas da região.</p>
       </div>
     </section>
