--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2>Culinária Integrativa</h2>
       <div class="content">
         <p>Sabores como barreado, pinhão e chimarrão ganham novas leituras com toques saudáveis. A proposta integrativa destaca vegetais, raízes nativas, preparo consciente e práticas funcionais em cafés, buffets e eventos de turismo rural.</p>
-        <img src="/img/image.png" alt="Culinária em ação">
+        <img src="/img/images (2).png" alt="Culinária em ação">
       </div>
     </section>
 
