--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="mostra" class="verde">
       <h2>Mostra Cultural</h2>
       <div class="content">
-        <img src="img/" alt="Mostra Cultural">
+        <img src="img/cultura.png" alt="Mostra Cultural">
         <p>Espaço dedicado à expressão artística local com apresentações de dança, música, teatro e exposições de artesanato. Incentiva a valorização da identidade cultural de Reserva e o protagonismo de artistas da região.</p>
       </div>
     </section>
