--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h2>Espaço Interativo e Educativo</h2>
       <div class="content">
         <p>Ambiente pensado para promover a educação ambiental, oficinas práticas, rodas de conversa e brincadeiras para crianças. Estimula o aprendizado coletivo e o contato direto com a natureza.</p>
-        <img src="img/espaco.jpg" alt="Espaço Educativo">
+        <img src="img/sercriança.jpeg" alt="Espaço Educativo">
       </div>
     </section>
   </main>
