--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
   <footer>
     <p>© 2025 CelebraCampo - Reserva/PR</p>
     <div class="redes">
-      <a href="#"><img src="img/twitter.jpeg" alt="X"></a>
-      <a href="#"><img src="img/instagram.jpeg" alt="Instagram"></a>
-      <a href="#"><img src="img/facebook.jpeg" alt="Facebook"></a>
+      <a href="#"><img src="img" alt="X"></a>
+      <a href="#"><img src="img" alt="Instagram"></a>
+      <a href="#"><img src="img" alt="Facebook"></a>
     </div>
   </footer>
 </body>
