--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <div class="content">
         <img src="img/WhatsApp Image 2025-06-12 at 09.18.26 (1).jpeg" alt="Feira da Lua 1">
         <img src="img/WhatsApp Image 2025-06-12 at 09.18.26 (2).jpeg" alt="Feira da Lua 2">
-        <p>O "Luau em Reserva", no Paraná, é um evento que mistura cultura, natureza e diversão, em ambientes ao ar livre. Com música ao vivo, gastronomia local e clima relaxante, atrai cada vez mais visitantes, sendo uma celebração adaptada às tradições paranaenses.</p>
+        <p>O O "Luau em Reserva", realizado em Reserva, no estado do Paraná, é um evento que tem ganhado popularidade, principalmente por sua proposta de integração entre cultura, natureza e diversão. Não é um evento comum de grandes festas, mas sim algo mais intimista, geralmente realizado em ambientes ao ar livre, com uma conexão direta com o ecossistema local.
+Embora o evento não seja tão amplamente divulgado quanto grandes festivais em capitais, ele atrai muitos visitantes por sua atmosfera relaxante, música ao vivo, danças e, frequentemente, a possibilidade de apreciar uma belíssima paisagem noturna. O luau, como é tradicionalmente entendido, é uma festa ao estilo havaiano, mas em contextos brasileiros, é adaptado às realidades locais.</p>
       </div>
     </section>
 
