--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@ Embora o evento não seja tão amplamente divulgado quanto grandes festivais em 
     <section id="culinaria" class="laranja">
       <h2>Culinária Integrativa</h2>
       <div class="content">
-        <p>Sabores como barreado, pinhão e chimarrão ganham novas leituras com toques saudáveis. A proposta integrativa destaca vegetais, raízes nativas, preparo consciente e práticas funcionais em cafés, buffets e eventos de turismo rural.</p>
+        <p>Sabores paranaenses tradicionais como barreado, pinhão, e chimarrão são a base. A versão integrativa os traz com adaptações modernas:
+Cozimento mais controlado, uso de cortes mais magros ou maior proporção de vegetais.
+Complemento com raízes nativas ou vegetais de baixo índice glicêmico.
+Alimentos locais como aipim, batata-doce, mandioca, verduras da época e frutas da mata ensejam pratos criativos (por exemplo, tortas salgadas com raízes e queijo local, acompanhadas de chás naturais ou infusões de ervas).
+Centros de turismo rural ou ecológico — similares ao que há em Cafeeiras, Morretes ou Guaraqueçaba — incorporam essas práticas em seus menus, muitas vezes em formato de refeições coletivas (“jantar comunitário saudável”) ou oficinas de gastronomia funcional.
+Buffets e cafés em cidades próximas (como Francisco Beltrão ou Foz do Iguaçu) já oferecem “gastronomia funcional / integrativa”, focando em alimentos completos, sazonais e integração com práticas holísticas </p>
         <img src="/img/image.png" alt="Culinária em ação">
       </div>
     </section>
