--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
       <div class="content">
         <img src="img/WhatsApp Image 2025-06-12 at 09.18.26 (1).jpeg" alt="Feira da Lua 1">
         <img src="img/WhatsApp Image 2025-06-12 at 09.18.26 (2).jpeg" alt="Feira da Lua 2">
-        <p>O "Luau em Reserva", realizado em Reserva, no estado do Paraná, é um evento que tem ganhado popularidade, principalmente por sua proposta de integração entre cultura, natureza e diversão...</p>
+        <p>O O "Luau em Reserva", realizado em Reserva, no estado do Paraná, é um evento que tem ganhado popularidade, principalmente por sua proposta de integração entre cultura, natureza e diversão. Não é um evento comum de grandes festas, mas sim algo mais intimista, geralmente realizado em ambientes ao ar livre, com uma conexão direta com o ecossistema local.
+Embora o evento não seja tão amplamente divulgado quanto grandes festivais em capitais, ele atrai muitos visitantes por sua atmosfera relaxante, música ao vivo, danças e, frequentemente, a possibilidade de apreciar uma belíssima paisagem noturna. O luau, como é tradicionalmente entendido, é uma festa ao estilo havaiano, mas em contextos brasileiros, é adaptado às realidades locais.</p>
       </div>
     </section>
 
@@ -200,7 +201,7 @@
       <h2>Oficinas Mistas</h2>
       <div class="content">
         <img src="img/WhatsApp Image 2025-06-12 at 09.13.36 (1).jpeg" alt="Oficina Cultural">
-        <p>A Em Reserva (PR), a Secretaria de Educação, Cultura, Esporte e Lazer promove diversas oficinas mistas gratuitas...</p>
+        <p>A Em Reserva (PR), a Secretaria de Educação, Cultura, Esporte e Lazer promove diversas oficinas mistas gratuitas — ou seja, abertas a todas as idades e gêneros. Elas envolvem tanto atividades esportivas quanto culturais, acontecendo com inscrição na própria Secretaria.</p>
         <img src="img/WhatsApp Image 2025-06-12 at 09.13.36.jpeg" alt="Costurando Sonhos">
       </div>
     </section>
@@ -209,7 +210,12 @@
     <section id="culinaria" class="laranja">
       <h2>Culinária Integrativa</h2>
       <div class="content">
-        <p>Sabores paranaenses tradicionais como barreado, pinhão, e chimarrão são a base. A versão integrativa os traz com adaptações modernas...</p>
+        <p>Sabores paranaenses tradicionais como barreado, pinhão, e chimarrão são a base. A versão integrativa os traz com adaptações modernas:
+Cozimento mais controlado, uso de cortes mais magros ou maior proporção de vegetais.
+Complemento com raízes nativas ou vegetais de baixo índice glicêmico.
+Alimentos locais como aipim, batata-doce, mandioca, verduras da época e frutas da mata ensejam pratos criativos (por exemplo, tortas salgadas com raízes e queijo local, acompanhadas de chás naturais ou infusões de ervas).
+Centros de turismo rural ou ecológico — similares ao que há em Cafeeiras, Morretes ou Guaraqueçaba — incorporam essas práticas em seus menus, muitas vezes em formato de refeições coletivas (“jantar comunitário saudável”) ou oficinas de gastronomia funcional.
+Buffets e cafés em cidades próximas (como Francisco Beltrão ou Foz do Iguaçu) já oferecem “gastronomia funcional / integrativa”, focando em alimentos completos, sazonais e integração com práticas holísticas.</p>
         <img src="/img/image.png" alt="Culinária em ação">
       </div>
     </section>
@@ -219,7 +225,17 @@
       <h2>Mostra Cultural</h2>
       <div class="content">
         <img src="img/cultura.png" alt="Mostra Cultural">
-        <p>Espaço dedicado à expressão artística local com apresentações de dança, música, teatro e exposições de artesanato...</p>
+        <p>Claro! Aqui está uma versão mais resumida do texto sobre a **Mostra Cultural em Reserva - PR**:
+
+---
+
+### **Mostra Cultural em Reserva - PR: Valorizando a Arte Local**
+
+A **Mostra Cultural de Reserva** é um evento que celebra a diversidade e as tradições culturais do município, reunindo artistas, músicos, dançarinos e artesãos locais. Com uma programação rica em apresentações de dança, música ao vivo, teatro e exposições de artesanato, o evento tem como objetivo dar visibilidade aos talentos da região e promover a valorização da identidade cultural de Reserva.
+
+Além de um espaço para apreciação artística, a Mostra também oferece workshops e feiras de artesanato, permitindo uma interação direta entre artistas e público. Através desse evento, a cidade fortalece seu orgulho cultural e atrai visitantes interessados na cultura paranaense.
+
+A **Mostra Cultural em Reserva** é, portanto, uma excelente oportunidade para conhecer e vivenciar a riqueza das expressões artísticas locais, preservando as tradições enquanto inspira novos talentos.</p>
       </div>
     </section>
 
@@ -227,7 +243,7 @@
     <section id="espaco" class="verde">
       <h2>Espaço Interativo e Educativo</h2>
       <div class="content">
-        <p>Ambiente pensado para promover a educação ambiental, oficinas práticas, rodas de conversa e brincadeiras para crianças...</p>
+        <p>O Espaço Interativo de Reserva é um ambiente educativo e dinâmico, pensado para promover o aprendizado coletivo e a interação com a natureza. Com oficinas práticas, rodas de conversa e atividades lúdicas para crianças, o espaço busca sensibilizar a comunidade sobre questões ambientais de forma divertida e envolvente. Uma oportunidade única para todas as idades aprenderem e se conectarem com o meio ambiente de maneira prática e direta.</p>
         <img src="img/sercriança.jpeg" alt="Espaço Educativo">
       </div>
     </section>
