--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     }
 
     nav ul li a:hover {
-      color: #ffd700;
+      color:#0077b6;
     }
 
     /* Estilização do conteúdo principal */
@@ -86,7 +86,7 @@
     }
 
     .laranja {
-      background-color: #ff7f11;
+      background-color:#0077b6;
       color: white;
     }
 
