--- a/index.html
+++ b/index.html
@@ -225,11 +225,7 @@ Buffets e cafés em cidades próximas (como Francisco Beltrão ou Foz do Iguaçu
       <h2>Mostra Cultural</h2>
       <div class="content">
         <img src="img/cultura.png" alt="Mostra Cultural">
-        <p>Claro! Aqui está uma versão mais resumida do texto sobre a **Mostra Cultural em Reserva - PR**:
-
----
-
-### **Mostra Cultural em Reserva - PR: Valorizando a Arte Local**
+        <p>**Mostra Cultural em Reserva - PR: Valorizando a Arte Local**
 
 A **Mostra Cultural de Reserva** é um evento que celebra a diversidade e as tradições culturais do município, reunindo artistas, músicos, dançarinos e artesãos locais. Com uma programação rica em apresentações de dança, música ao vivo, teatro e exposições de artesanato, o evento tem como objetivo dar visibilidade aos talentos da região e promover a valorização da identidade cultural de Reserva.
 
