--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     }
 
     .verde {
-      background-color: #2d6a4f;
+      background-color:#0077b6;
       color: white;
     }
 
@@ -121,7 +121,7 @@
 
     /* Estilização do Rodapé */
     footer {
-      background-color: #005f73;
+      background-color:#0077b6;
       color: white;
       padding: 20px;
       text-align: center;
