--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CelebraCampo - Reserva PR</title>
   <style>
+
     /* Resetando margens e paddings */
     * {
       margin: 0;
@@ -171,7 +172,13 @@
   <header>
     <div class="logo">
       <h1>CelebraCampo</h1>
+<p>Celebrando Culturas de Pequenas cidades</p>
+
+      <div class="Bandeira">
       <img src="img/WhatsApp Image 2025-06-12 at 09.18.25.jpeg" alt="Bandeira de Reserva PR">
+      </div>
+
+
     </div>
     <nav>
       <ul>
