--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       box-sizing: border-box;
     }
 
+.bandeira{
+
+}
+
     /* Estilos Globais */
     body {
       font-family: 'Arial', sans-serif;
@@ -171,12 +175,13 @@
 <body>
   <header>
     <div class="logo">
-      <h1>CelebraCampo</h1>
-<p>Celebrando Culturas de Pequenas cidades</p>
 
       <div class="Bandeira">
       <img src="img/WhatsApp Image 2025-06-12 at 09.18.25.jpeg" alt="Bandeira de Reserva PR">
       </div>
+
+      <h1>CelebraCampo</h1>
+<p>Celebrando Culturas de Pequenas cidades</p>
 
 
     </div>
