--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
 .bandeira{
-
+gap: 10px;
 }
 
     /* Estilos Globais */
@@ -47,7 +47,7 @@
       margin-right: 10px;
     }
 
-    header .logo img {
+    header .bandeira img {
       width: 50px;
       height: auto;
     }
@@ -174,7 +174,7 @@
 </head>
 <body>
   <header>
-    
+
      <div class="Bandeira">
       <img src="img/WhatsApp Image 2025-06-12 at 09.18.25.jpeg" alt="Bandeira de Reserva PR">
       </div>
