--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 .bandeira{
 gap: 10px;
+width:30px;
+height: 30px;
 }
 
     /* Estilos Globais */
@@ -45,11 +47,6 @@ gap: 10px;
     header .logo h1 {
       font-size: 2rem;
       margin-right: 10px;
-    }
-
-    header .bandeira img {
-      width: 50px;
-      height: auto;
     }
 
     nav ul {
