--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       box-sizing: border-box;
     }
 
-.Bandeira img {
+.Bandeira{
 gap: 10px;
 width:10px;
-height: 100px;
+height: 10px;
 }
 
     /* Estilos Globais */
