--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       box-sizing: border-box;
     }
 
+.Bandeira{
+gap: 10px;
+width:10px;
+height: 10px;
+}
 
     /* Estilos Globais */
     body {
