--- a/index.html
+++ b/index.html
@@ -161,6 +161,17 @@
         max-width: 100%;
       }
     }
+
+    .Bandeira {
+  margin-right: 16px; 
+}
+
+.Bandeira img {
+  width: 30px;   
+  height: auto;
+  display: block;
+}
+
   </style>
 </head>
 <body>
@@ -168,9 +179,13 @@
 
 
     <div class="logo">
+
+      <div class="Bandeira">
+  <img src="img/bandeira.jpeg" alt="bandeira de Reserva" srcset="">
+</div>
+
       <h1>CelebraCampo</h1>
 <p>Celebrando Culturas de Pequenas cidades</p>
-
 
     </div>
     <nav>
