--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Complemento com raízes nativas ou vegetais de baixo índice glicêmico.
 Alimentos locais como aipim, batata-doce, mandioca, verduras da época e frutas da mata ensejam pratos criativos (por exemplo, tortas salgadas com raízes e queijo local, acompanhadas de chás naturais ou infusões de ervas).
 Centros de turismo rural ou ecológico — similares ao que há em Cafeeiras, Morretes ou Guaraqueçaba — incorporam essas práticas em seus menus, muitas vezes em formato de refeições coletivas (“jantar comunitário saudável”) ou oficinas de gastronomia funcional.
 Buffets e cafés em cidades próximas (como Francisco Beltrão ou Foz do Iguaçu) já oferecem “gastronomia funcional / integrativa”, focando em alimentos completos, sazonais e integração com práticas holísticas.</p>
-        <img src="/img/image.png" alt="Culinária em ação">
+        <img src="/img/culinaria.jpeg" alt="Culinária em ação">
       </div>
     </section>
 
